[package]
name = "voxgen"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Procedural voxel generation"
repository = "https://github.com/wodend/voxgen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
line_drawing = "1.0.0"
nom = "7.1.3"
image = "0.24.6"
enterpolation = "0.2.0"
palette = "0.7.1"
